# graph-rewriting

./: .gitignore  AUTHORS  GL.hs  Graph.hs  GraphRewriting.hs  Main.hs  README.md  Resolver.hs  Rules.hs  Term.hs  TermRewriting.hs  examples  graph-rewriting-lambdascope.cabal  graph-rewriting-layout.cabal  graph-rewriting-ski.cabal  graph-rewriting-strategies.cabal  graph-rewriting-trs.cabal  graph-rewriting-ww.cabal  graph-rewriting.cabal
Data/: View.hs
Direct/: GL.hs  Main.hs  Rules.hs
GraphRewriting/: Graph.hs  Pattern.hs  Rule.hs
GraphRewriting/GL/: Canvas.hs
GraphRewriting/Graph/: Internal.hs  Read.hs
GraphRewriting/Layout/: Coulomb.hs  Gravitation.hs  RotPortSpec.hs  Wrapper.hs
GraphRewriting/Pattern/: InteractionNet.hs  Internal.hs
GraphRewriting/Rule/: Internal.hs
GraphRewriting/Strategies/: Control.hs  LeftmostOutermost.hs
INet/: GL.hs  Main.hs
base/: GraphRewriting.hs  README.md  graph-rewriting.cabal
base/GraphRewriting/: Graph.hs  Pattern.hs
examples/: 2times2.l  WW-beta-saving-1.l  asperti_guerrini_3011.l  fix.l  lamping_p20r_qp_simpl.l  morazan-fig1.l  morazan-fig4.l  mul.trs  ski.trs  sum1234.l
examples/combinator_birds/: bluebird.ski  cardinal_twice_removed.ski  crossed_konstant_mocker.ski  finch_once_removed.ski  goldfinch.ski  hummingbird.ski  konstant_mocker.ski  mockingbird.ski  owl.ski  quacky_bird.ski  quirky_bird.ski  robin_once_removed.ski  vireo_once_removed.ski  vireo_twice_removed.ski  warbler.ski
gl/: graph-rewriting-gl.cabal
lambdascope/: Graph.hs  Main.hs  Resolver.hs  Rules.hs  graph-rewriting-lambdascope.cabal
lambdascope/examples/: exp_simpl.l  lamping_p20r_qp.l  lamping_p20r_qq.l  lamping_p20r_qq_simpl.l  lamping_simpl.l  levy-1988-p184bottom.l  morazan-fig8.l  not-ll-expr-1.l  repeat_naive.l  repeat_optim.l  running_ineff.l  sum1.l  sum_case.l  twice.l  vincent-0-ww.l  vincent-1-ww.l
layout/: graph-rewriting-layout.cabal
ski/Common/: GL.hs  Term.hs
ski/Direct/: GL.hs  Graph.hs  Rules.hs
strategies/: AUTHORS  graph-rewriting-strategies.cabal
trs/: GL.hs  Graph.hs  LICENSE  Main.hs  Rules.hs  graph-rewriting-trs.cabal
ww/: GL.hs  Rules.hs  Term.hs
(+70 files in other folders)
